--- a/templates/punchh/rubyCI/templateDefinition.yml
+++ b/templates/punchh/rubyCI/templateDefinition.yml
@@ -50,6 +50,7 @@ pipelines:
             - sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             - sudo chmod +x /usr/local/bin/docker-compose
           onExecute:
+            - echo "NODENUMBER is $NODENUMBER"
             - pushd $res_{{ .Values.github.utils.name }}_resourcePath
             - python3 --version
             - cat docker-compose.yaml
