--- a/templates/punchh/rubyCI/templateDefinition.yml
+++ b/templates/punchh/rubyCI/templateDefinition.yml
@@ -27,6 +27,14 @@ resources:
 # pipline with single step for building docker image on custom runtime image container.
 pipelines:
   - name: {{ .Values.pipeline.name }}
+    configuration:
+    runtime:
+     type: image
+     image:
+       custom:
+        name: kanishkrajawat01/u16ruball
+        tag: latest
+        options: --network=host
     steps:
       - name: matrix_test
         type: Matrix
