--- a/templates/test/GitBranch/templateDefinition.yml
+++ b/templates/test/GitBranch/templateDefinition.yml
@@ -2,7 +2,7 @@ resources:
   - name: gittest
     type: GitRepo
     configuration:
-      gitProvder: github
+      gitProvider: github
       path: trriplejay/simpleserver
       branches:
         include: {{gitBranch}}
