--- a/templates/test/Conditional/templateDefinition.yml
+++ b/templates/test/Conditional/templateDefinition.yml
@@ -1,5 +1,5 @@
 resources:
-  - name: myBag
+  - name: myBag_{{ .Values.name }}
     type: PropertyBag
     configuration:
     {{ if or (eq "{{ .Values.test }}" "1") (eq "{{ .Values.server }}" "1") }}
