--- a/templates/test/Conditional/templateDefinition.yml
+++ b/templates/test/Conditional/templateDefinition.yml
@@ -2,9 +2,9 @@ resources:
   - name: myBag_{{ .Values.name }}
     type: PropertyBag
     configuration:
-    {{ if eq "{{ .Values.test }}" "1" }}
+    {{ if (eq "{{ .Values.test }}" "1") }}
       foo: "test or server is 1"
-    {{ else if eq "{{ .Values.server }}" "1" }}
+    {{ else if (eq "{{ .Values.server }}" "1") }}
       foo: "test or server is 1"
     {{ else }}
       foo: "test or server are NOT 1"
