--- a/templates/test/Conditional/templateDefinition.yml
+++ b/templates/test/Conditional/templateDefinition.yml
@@ -2,6 +2,8 @@ resources:
   - name: myBag_{{ .Values.name }}
     type: PropertyBag
     configuration:
+      test: test_{{ .Values.test }}
+      server: server_{{ .Values.server }}
     {{ if (eq "{{ .Values.test }}" "1") }}
       foo: "test or server is 1"
     {{ else if (eq "{{ .Values.server }}" "1") }}
