--- a/templates/test/Conditional/templateDefinition.yml
+++ b/templates/test/Conditional/templateDefinition.yml
@@ -2,7 +2,7 @@ resources:
   - name: myBag_{{ .Values.name }}
     type: PropertyBag
     configuration:
-    {{ if or (eq ".Values.test" "1") (eq ".Values.server" "1") }}
+    {{ if (eq ".Values.test" "1") }}
       foo: "test or server is 1"
     {{ else }}
       foo: "test or server are NOT 1"
