--- a/templates/test/Conditional/templateDefinition.yml
+++ b/templates/test/Conditional/templateDefinition.yml
@@ -2,7 +2,7 @@ resources:
   - name: myBag_{{ .Values.name }}
     type: PropertyBag
     configuration:
-    {{ if ".Values.test" }}
+    {{ if or ".Values.test" ".Values.server" }}
       foo: "test or server is 1"
     {{ else }}
       foo: "test or server are NOT 1"
