now we're getting somewhere'

--- a/templates/test/Conditional/templateDefinition.yml
+++ b/templates/test/Conditional/templateDefinition.yml
@@ -2,9 +2,7 @@ resources:
   - name: myBag_{{ .Values.name }}
     type: PropertyBag
     configuration:
-    {{ $result := (or .Values.test .Values.server)}}
-      result: {{ $result }}
-    {{ if $result }}
+    {{ if (or (eq .Values.test "1") (eq .Values.server "1")) }}
       foo: "test or server is 1"
     {{ else }}
       foo: "test or server are NOT 1"
