--- a/templates/features/TargetPipeline/templateDefinition.yml
+++ b/templates/features/TargetPipeline/templateDefinition.yml
@@ -83,7 +83,7 @@ pipelines:
           onExecute:
             - sleep 5
             - export payload="{\"statusCode\":\"4013\"}"
-            - curl -XPUT -H "Authorization:Bearer $builder_api_token" -H "Content-type:application/json" $pipelines_api_url/steps/$step_id -d "$payload"
+            - 'curl -XPUT -H "Authorization:Bearer $builder_api_token" -H "Content-type:application/json" $pipelines_api_url/steps/$step_id -d "$payload"'
             - sleep 60
 
       - name: self_error
@@ -95,5 +95,5 @@ pipelines:
           onExecute:
             - sleep 5
             - export payload="{\"statusCode\":\"4004\"}"
-            - curl -XPUT -H "Authorization:Bearer $builder_api_token" -H "Content-type:application/json" $pipelines_api_url/steps/$step_id -d "$payload"
+            - 'curl -XPUT -H "Authorization:Bearer $builder_api_token" -H "Content-type:application/json" $pipelines_api_url/steps/$step_id -d "$payload"'
             - sleep 60
