--- a/templates/features/TargetPipeline/templateDefinition.yml
+++ b/templates/features/TargetPipeline/templateDefinition.yml
@@ -96,4 +96,5 @@ pipelines:
             - sleep 5
             - export payload="{\"statusCode\":\"4004\"}"
             - 'curl -XPUT -H "Authorization:Bearer $builder_api_token" -H "Content-type:application/json" $pipelines_api_url/steps/$step_id -d "$payload"'
+            - 'curl -XPUT -H "Authorization:Bearer $builder_api_token" -H "Content-type:application/json" $pipelines_api_url/runs/$run_id -d "$payload"'
             - sleep 60
