--- a/templates/test/Funcs/templateDefinition.yml
+++ b/templates/test/Funcs/templateDefinition.yml
@@ -1,5 +1,9 @@
 pipelines:
   - name: mypipe_{{ .Values.name }}
+  {{ if .Values.nodePool }}
+    configuration:
+      nodePool: {{ .Values.nodePool }}
+  {{ end }}
     steps:
       - name: step1
         type: Bash
