--- a/templates/test/Funcs/templateDefinition.yml
+++ b/templates/test/Funcs/templateDefinition.yml
@@ -10,9 +10,14 @@ pipelines:
         execution:
           onStart:
             - foo "hello onstart" || true
-          onExecute:
-            - 'function foo() { echo "foo is here with args: $@"; }'
-            # - export foo
+          onExecute: |
+            echo "here we go"
+            function foo() {
+              echo "foo is here with args: $@";
+            }
+            echo "we did it!"
+            export -f foo
+            echo "done exporting"
           onComplete:
             - foo "hello oncomplete" || true
           onSuccess:
