--- a/templates/intro/HelloWorld/templateDefinition.yml
+++ b/templates/intro/HelloWorld/templateDefinition.yml
@@ -60,18 +60,6 @@ pipelines:
             - write_output {{ .Values.namePrefix }}_bag "timestamp=$(date +%s)"
             - write_output {{ .Values.namePrefix }}_bag "releaseVersion=${pipeline_name}.${run_number}"
 
-      - name: run_variable_step
-        type: Bash
-        configuration:
-          affinityGroup: step_info_collection
-          inputSteps:
-            - name: first_step
-        execution:
-          onStart:
-            - echo "This step will write to a value to a run variable"
-          onExecute:
-            - add_run_variables step_info="runNumber $run_number, step_name $step_name, pipeline_name $pipeline_name"
-
       - name: print_resource_step
         type: Bash
         configuration:
@@ -81,6 +69,20 @@ pipelines:
           onExecute:
             - echo "Release Version is -- ${releaseVersion}"
             - echo "Release timestamp is -- ${timestamp}"
+
+
+      - name: run_variable_step
+        type: Bash
+        configuration:
+          affinityGroup: step_info_collection
+          inputSteps:
+            - name: first_step
+        execution:
+          onStart:
+            - echo "This step will write to a value to a run variable, and add a file to the affinity group shared space."
+          onExecute:
+            - add_run_variables step_info="runNumber $run_number, step_name $step_name, pipeline_name $pipeline_name"
+            - echo "${step_info}" > ${shared_workspace}/step_info.txt
 
       - name: print_variable_step
         type: Bash
@@ -101,6 +103,7 @@ pipelines:
           onExecute:
             - echo "Printing step_info from previous step"
             - echo "${step_info}"
+            - cat ${shared_workspace}/step_info.txt
           onFailure:
             - echo "step has failed."
           onSuccess:
