--- a/templates/intro/HelloWorld/templateDefinition.yml
+++ b/templates/intro/HelloWorld/templateDefinition.yml
@@ -18,7 +18,7 @@ resources:
     type: GitRepo
     configuration:
       path: {{ .Values.repo.path }}
-      gitProvider: {{ .values.repo.integrationName }}
+      gitProvider: {{ .Values.repo.integrationName }}
       branches:
         include: {{ .Values.repo.branchPattern }}
 {{ end }}
