--- a/templates/intro/HelloWorld/templateDefinition.yml
+++ b/templates/intro/HelloWorld/templateDefinition.yml
@@ -40,6 +40,7 @@ pipelines:
             - echo "onStart can be used to do some setup or initialization of your dependencies to prepare for the execution."
           onExecute:
             - echo "onExecute is the main section where you would issue your build/test commands"
+            - jfrog --version
           onSuccess:
             - echo "onSuccess executes if the onStart or onExecute sections completed without errors"
           onFailure:
