--- a/templates/intro/HelloWorld/values.yml.example
+++ b/templates/intro/HelloWorld/values.yml.example
@@ -1,4 +1,4 @@
-# This string will prefix the example resource and pipeline.
+# This string will prefix the "hello-world" resource and pipeline.
 # it will allow you to add the pipeline multiple times with unique names
 namePrefix: intro
 
@@ -7,10 +7,15 @@ namePrefix: intro
 # experiment with, you can add it here.
 ##
 repo:
-  path: "myorgname/myreponame"
-  # branchPattern is a regex, so you could listen to all
-  # features, for example, with "^feature.*"
-  branchPattern: "^main$"
   # Before creating your Pipeline Source, create an integration for one of the
   # source control providers and put the integration name here.
   integrationName: myGitIntegration
+
+  # this is the full repository path. Usually org/repo or user/project
+  # depending on which source control you use.
+  path: "myorgname/myreponame"
+
+  # branchPattern is a regex, so you could listen to all
+  # features, for example, with "^feature.*"
+  branchPattern: "^main$"
+
