--- a/templates/intro/HelloWorld/templateDefinition.yml
+++ b/templates/intro/HelloWorld/templateDefinition.yml
@@ -1,6 +1,6 @@
 ###
 ## Hello World
-# This pipeline is designed to showcase
+# This pipeline is designed to showcase some basic JFrog Pipelines functionality
 ###
 # resources usually represent static artifacts or configurations. In
 # this example we're using a simple "PropertyBag" to hold some
@@ -48,20 +48,29 @@ pipelines:
           onComplete:
             - echo "onComplete executes after onSuccess or onFailure"
 
-      - name: output_resource_step
+      - name: variable_selection_step
         type: Bash
         configuration:
           inputSteps:
             - name: first_step
-          outputResources:
-            - name: {{ .Values.namePrefix }}_bag
-
+          environmentVariables:
+            forceFail:
+              default: "false"
+              description: "set to 'true' to force the step to fail."
+              values:
+                - "false"
+                - "true"
         execution:
           onStart:
-            - echo "Updating resource {{ .Values.namePrefix }}_bag with new key/value pairs"
+            - if [ ${forceFail} == "true" ]; then exit 1; fi
           onExecute:
-            - write_output {{ .Values.namePrefix }}_bag "timestamp=$(date +%s)"
-            - write_output {{ .Values.namePrefix }}_bag "releaseVersion=${pipeline_name}.${run_number}"
+            - echo "This step will succeed"
+          onFailure:
+            - echo "step has failed."
+          onSuccess:
+            - echo "step has succeeded."
+          onComplete:
+            - echo "onComplete executes regardless of success or failure. forceFail is ${forceFail}"
 
       - name: run_variable_step
         type: Bash
@@ -74,32 +83,46 @@ pipelines:
           onExecute:
             - add_run_variables step_info="runNumber $run_number, step_name $step_name, pipeline_name $pipeline_name"
 
-      - name: final_step
+      - name: verify_details_step
         type: Bash
         configuration:
           inputSteps:
             - name: run_variable_step
-          inputResources:
-            - name: {{ .Values.namePrefix }}_bag
-          environmentVariables:
-            forceFail:
-              default: "false"
-              description: "set to 'true' to force the step to fail."
-              values:
-                - "false"
-                - "true"
+            - name: variable_selection_step
         execution:
           onStart:
-            - if [ ${forceFail} == "true" ]; then exit 1; fi
+            - echo "This step will print the value of the run variable added by the previous step"
+          onExecute:
+            - echo "Printing step_info from previous step"
+            - echo "${step_info}"
+
+      - name: output_resource_step
+        type: Bash
+        configuration:
+          inputSteps:
+            - name: verify_details_step
+          outputResources:
+            - name: {{ .Values.namePrefix }}_bag
+        execution:
+          onStart:
+            - echo "Updating resource {{ .Values.namePrefix }}_bag with new key/value pairs"
+          onExecute:
+            - write_output {{ .Values.namePrefix }}_bag "timestamp=$(date +%s)"
+            - write_output {{ .Values.namePrefix }}_bag "releaseVersion=${pipeline_name}.${run_number}"
+            - write_output {{ .Values.namePrefix }}_bag "stepInfo=${step_info}"
+
+      - name: final_step
+        type: Bash
+        configuration:
+          inputResources:
+            - name: {{ .Values.namePrefix }}_bag
+        execution:
           onExecute:
             - echo "Printing step_info from previous step"
             - echo "${step_info}"
             - echo "printing resource details"
             - echo "Release Version is -- ${res_{{ .Values.namePrefix }}_bag_releaseVersion}"
             - echo "Release timestamp is -- ${res_{{ .Values.namePrefix }}_bag_timestamp}"
-          onFailure:
-            - echo "step has failed."
-          onSuccess:
-            - echo "step has succeeded."
-          onComplete:
-            - echo "onComplete executes regardless of success or failure. forceFail is ${forceFail}"
+            - echo "Step Info is -- ${res_{{ .Values.namePrefix }}_bag_stepInfo}"
+
+
