--- a/templates/intro/HelloWorld/templateDefinition.yml
+++ b/templates/intro/HelloWorld/templateDefinition.yml
@@ -79,7 +79,7 @@ pipelines:
             - name: first_step
         execution:
           onStart:
-            - echo "This step will write to a value to a run variable, and add a file to the affinity group shared space."
+            - echo "This step will write a value to a run variable."
           onExecute:
             - add_run_variables step_info="runNumber $run_number, step_name $step_name, pipeline_name $pipeline_name"
 
@@ -108,11 +108,7 @@ pipelines:
             - name: {{ .Values.namePrefix }}_bag
         execution:
           onExecute:
-            - echo "Printing step_info from previous step"
-            - echo "${step_info}"
             - echo "printing resource details"
             - echo "Release Version is -- ${res_{{ .Values.namePrefix }}_bag_releaseVersion}"
             - echo "Release timestamp is -- ${res_{{ .Values.namePrefix }}_bag_timestamp}"
             - echo "Step Info is -- ${res_{{ .Values.namePrefix }}_bag_stepInfo}"
-
-
